--- a/config/ros2.env
+++ b/config/ros2.env
@@ -1,5 +1,11 @@
-export FASTRTPS_DEFAULT_PROFILES_FILE=/opt/config/fastrtps.xml
 export ROBOT_NAMESPACE=
 export ROS_DOMAIN_ID=0
 export ROS_DISCOVERY_SERVER=
+
+# To use FASTRTPS, uncomment these lines:
 export RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+export FASTRTPS_DEFAULT_PROFILES_FILE=/opt/config/fastrtps.xml
+
+# To use CycloneDDS, uncomment these lines:
+#export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+#export CYCLONEDDS_URI=/opt/config/cyclonedds.xml
